--- a/offlinedigitaleuro/src/main/res/values/strings.xml
+++ b/offlinedigitaleuro/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="print_money">Print Money</string>
     <string name="verify_money">Verify Money</string>
     <string name="print">Print</string>
+    <string name="list_of_user_from_web_of_trust">List of user from web of trust</string>
 </resources>
