--- a/detoks/src/main/res/values/strings.xml
+++ b/detoks/src/main/res/values/strings.xml
@@ -21,10 +21,13 @@
     <string name="upload_date">Upload date: %1$d</string>
     <string name="peers">Peers</string>
     <string name="seeders">Seeders</string>
-    <string name="dht_peers">DHT peers</string>
+    <string name="remaining_mb">Remaining (MB)</string>
     <string name="download_rate_n_kb_s">Download rate \n (KB/s)</string>
     <string name="file_size_n_mb">File size \n (MB)</string>
     <string name="elapsed_time_n_seconds">Elapsed time \n (seconds)</string>
     <string name="first_mb_progress">First MB progress:</string>
     <string name="total_progress">Total progress:</string>
+    <string name="file_name">File name:\t</string>
+    <string name="done_downloading_will_play_video_now">DONE DOWNLOADING - will play video now</string>
+    <string name="torrent_name_t">Torrent name:\t</string>
 </resources>
