--- a/detoks/src/main/res/values/strings.xml
+++ b/detoks/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
     <string name="estimated_network_size">Estimated network size: %1$d</string>
     <string name="nb_connected_peers">Number of connected peers: %1$d</string>
     <string name="list_connected_peers">List of connected peers: %1$s</string>
+    <string name="top_3_leeching_torrents">Top 3 leeching torrents: %1$s</string>
+    <string name="top_3_seeding_torrents">Top 3 seeding torrents: %1$s</string>
+    <string name="seeding_status">Seeding status: %b</string>
+    <string name="wallet_tokens">Wallet tokens amount: %1$.2f</string>
+    <string name="peer_id">Peer ID: %1$s</string>
 </resources>
