Fix resource issues

--- a/valuetransfer/src/main/res/values/strings.xml
+++ b/valuetransfer/src/main/res/values/strings.xml
@@ -156,7 +156,7 @@
     <string name="text_gateway_save">Save Gateway</string>
     <string name="text_gateway_prefer">Prefer Gateway</string>
     <string name="text_address">Address</string>
-    <string name="text_attestation_confirm"><![CDATA[An attestation has been requested with name <b>%s</b> and format <b>%s</b>. Please confirm the attestation by providing the requested value.]]></string>
+    <string name="text_attestation_confirm"><![CDATA[An attestation has been requested with name <b>%1$s</b> and format <b>%2$s</b>. Please confirm the attestation by providing the requested value.]]></string>
     <string name="text_attestation_provide_value">Provide requested attribute value</string>
     <string name="text_attestation_attribute_type">Attribute type</string>
     <string name="text_attestation_attribute_name">Attribute name</string>
@@ -238,7 +238,7 @@
     <string name="text_contact_chat_outgoing_transfer_of">Outgoing transaction of €%s</string>
     <string name="text_contact_chat_incoming_transfer_of">Incoming transaction of €%s</string>
     <string name="text_contact_chat_incoming_transfer">Incoming transaction</string>
-    <string name="text_contact_chat_incoming_transfer_with_message">%s for \'%s\'</string>
+    <string name="text_contact_chat_incoming_transfer_with_message">%1$s for \'%2$s\'</string>
     <string name="text_contact_chat_incoming_transfer_request_with_message">for \'%s\'</string>
     <string name="text_contact_chat_outgoing_transfer_failed">Outgoing transfer failed</string>
     <string name="text_contact_chat_incoming_transfer_unknown">Ask to resend transfer</string>
@@ -280,11 +280,11 @@
     <string name="text_confirm_contact_add">Do you want to add contact %s to your address book?</string>
     <string name="text_latitude">latitude</string>
     <string name="text_longitude">longitude</string>
-    <string name="text_url_google_maps">"https://www.google.com/maps/place/%s,%s"</string>
+    <string name="text_url_google_maps">"https://www.google.com/maps/place/%1$s,%2$s"</string>
     <string name="text_transfer_of_request">Transfer of request: %s</string>
     <string name="text_send_photo_video">Send Photo</string>
     <string name="text_send_file">Send File</string>
-    <string name="text_location_address_line">No address found using these coordinates: %s %s</string>
+    <string name="text_location_address_line">No address found using these coordinates: %1$s %2$s</string>
     <string name="text_local_conversation">local conversation completely</string>
     <string name="text_contact_connected">Connected with IPv8</string>
     <string name="text_qr_not_recognized">QR code not recognized</string>
@@ -367,11 +367,11 @@
     <string name="text_identity_add_image">Add Identity Image</string>
     <string name="text_identity_delete_image">Delete Identity Image</string>
     <string name="text_choose_attachment">Choose Attachment</string>
-    <string name="text_identity_updated_new">The identity of this contact has been determined. The identity is %s and the (official) name of the contact is %s.</string>
+    <string name="text_identity_updated_new">The identity of this contact has been determined. The identity is %1$s and the (official) name of the contact is %2$s.</string>
     <string name="text_identity_updated_unverified_message">Please be aware that if the identity is unverified it may have a fake identity name.</string>
     <string name="text_identity_updated">The identity of the contact has been updated.</string>
     <string name="text_identity_updated_verification">The identity verification status changed to %s.</string>
-    <string name="text_identity_updated_name">The identity name has changed from %s to %s.</string>
+    <string name="text_identity_updated_name">The identity name has changed from %1$s to %2$s.</string>
     <string name="text_identity_updated_careful">Please be careful in case the name is unfamiliar.</string>
     <string name="text_identity_undetermined">The identity of the contact couldn\'t be determined from this message, please be careful.</string>
     <string name="text_all_media">All Media</string>
@@ -438,16 +438,16 @@
     <string name="transer_money_link_valid_iban">Please provide a valid IBAN</string>
     <string name="transer_money_link_valid_transaction_value">Transaction amount is too high or invalid</string>
     <string name="transer_money_link_valid_amount">Please provide a valid amount</string>
-    <string name="snackbar_contact_shared_to">Contact %s shared to %s</string>
+    <string name="snackbar_contact_shared_to">Contact %1$s shared to %2$s</string>
     <string name="snackbar_unexpected_error_occurred">Unexpected error occurred, please try again</string>
     <string name="snackbar_gateway_trying_connect">Trying to connect to gateway, continue on exchange portal</string>
     <string name="snackbar_exchange_sell_error">Sell of €%s did not succeed, please try again</string>
     <string name="snackbar_exchange_sell_success">Sold €%s to the selected gateway</string>
     <string name="snackbar_insufficient_balance">Insufficient balance</string>
-    <string name="snackbar_transfer_of">Transfer of €%s to %s</string>
-    <string name="snackbar_transfer_request">Transfer request of €%s sent to %s</string>
+    <string name="snackbar_transfer_of">Transfer of €%1$s to %2$s</string>
+    <string name="snackbar_transfer_request">Transfer request of €%1$s sent to %2$s</string>
     <string name="snackbar_authority_add_success">Authority has been added</string>
-    <string name="snackbar_authority_add_error">Authority alrady been added before</string>
+    <string name="snackbar_authority_add_error">Authority was already added before</string>
     <string name="snackbar_authority_remove_success">Authority has been removed</string>
     <string name="snackbar_identity_attribute_add_success">Identity attribute added</string>
     <string name="snackbar_identity_attribute_update_success">Identity attribute updated</string>
