--- a/freedomOfComputing/src/main/res/values/strings.xml
+++ b/freedomOfComputing/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="createAlertDialogMsg">Select whether you want to delete the apk or create a torrent out of it</string>
     <string name="createDownloadDialogTitle">Enter a URL on which the .apk file can be downloaded</string>
     <string name="noDownloadInProgress">No download in progress</string>
+    <string name="voteButton">Vote</string>
 </resources>
