43 research how to add apps to the main screen (#57)
* Add initial working code for adding apps to the home screen.

* Add button to install apps to home screen

* Add code to more idiomatic install foc apps, and allows for removing apps from the home screen.

* Fix warnings

* Add functionality for installing apps when a threshold is reached

* Add appdefinition tests

* Remove redundant code

* Add tests for appLoader

* Fix style issues

* Add tests for InstalledApps

* Add kdoc

* Fix ktlint style issue

* re add code that got removed by merging.

* remove TODOs

--- a/freedomOfComputing/src/main/res/values/strings.xml
+++ b/freedomOfComputing/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="downloadProgressPercentage">%1$s</string>
     <string name="failedCounter">Failed torrent counter map: %1$s</string>
     <string name="evaRetries">Eva retries: %1$d</string>
+    <string name="installButton">Install</string>
     <string name="cancelButton">Cancel</string>
     <string name="downloadButton">Download</string>
     <string name="deleteButton">Delete</string>
