--- a/eurotoken/src/main/res/values/strings.xml
+++ b/eurotoken/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="action_request_payment">Request Payment</string>
     <string name="action_send_payment">Send Payment</string>
     <string name="recent_activity">Recent Activity</string>
+    <string name="title_send_options">Send Options</string>
+    <string name="title_receive_options">Receive Options</string>
+
+    <string name="intro_transfer_method">Select how to transfer EuroToken:</string>
+
 </resources>
